[package]
name = "munk_fetch"
version = "0.2.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
data-url = "0.3.1"
deno_core = "0.347.0"
deno_error = "0.5.6"
deno_fs = "0.115.0"
deno_path_util = "=0.3.2"
deno_permissions = "0.64.0"
deno_tls = "0.192.0"
dyn-clone = "1.0.19"
error_reporter = "1.0.0"
h2 = "0.4.10"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["tokio-runtime", "serde"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1.11", features = ["tokio", "client", "client-legacy", "server", "server-auto"] }
ipnet = "2.11.0"
percent-encoding = "2.3.1"
rustls-webpki = "0.102"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"] }
tokio-socks = "0.5.2"
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2", default-features = false, features = ["retry", "util"] }
tower-http = { version = "0.6.4", features = ["decompression-br", "decompression-gzip"] }
tower-service = "0.3.3"

[dev-dependencies]
fast-socks5 = "0.10.0"
